Corrected typos/details based on Louise's feedback

--- a/Results.tex
+++ b/Results.tex
@@ -8,7 +8,7 @@
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.8\textwidth]{Figures/Fig1_endogenous.pdf}
-    \caption{Imaging DSB repair in live \textit{E. coli}. \textbf{(A)} Scheme of our experimental protocol. The RecB subunit of the RecBCD complex is fused to a Halo-tag, bound by the JF549 fluorescent dye. A long exposure time (1 sec) makes diffusing molecules appear as diffuse signal in the cell, while DNA-bound molecules are visible as bright, diffraction-limited spots. \textbf{(B)} Example image of a RecB spot (white arrow). \textbf{(C)} Example images of a timelapse acquisition (1 image every 2 sec for 100 sec). \textbf{(D)} Histogram of the lifetime of RecB spots (bars) fitted with a mono-exponential decay function ($y=a.e^{-k.t}$) \textbf{(E)} Scheme of our RecA imaging system (from \cite{Wiktor2021}). Free and fluorescently labelled RecA are present in equal amounts in the cell. \textbf{(F)} Example image of RecA imaging under endogenous DNA damage. RecA is diffuse in most cells, a RecA focus and a RecA filament are visible in two of the cells (white arrows). \textbf{(G)} Proportions of cells containing the different RecA structures (dots: individual datasets, bars: average between datasets).}
+    \caption{Imaging DSB repair in live \textit{E. coli}. \textbf{(A)} Scheme of our experimental protocol. The RecB subunit of the RecBCD complex is fused to a Halo-tag, bound by the JF549 fluorescent dye. A long exposure time (1 sec) makes diffusing molecules appear as diffuse signal in the cell, while DNA-bound molecules are visible as bright, diffraction-limited spots. \textbf{(B)} Example image of a RecB spot (white arrow). \textbf{(C)} Example images of a timelapse acquisition (1 image every 2 sec for 100 sec). \textbf{(D)} Histogram of the lifetime of RecB spots (bars) fitted with a mono-exponential decay function ($y=a.e^{-k.t}$) \textbf{(E)} Scheme of our RecA imaging system (from \cite{Wiktor2021}). Free and fluorescently labelled RecA are present in equal amounts in the cell. \textbf{(F)} Example image of RecA imaging under endogenous DNA damage. RecA-associated fluorescence is diffuse in most cells, a RecA focus and a RecA filament are visible in two of the cells (white arrows). \textbf{(G)} Proportions of cells containing the different RecA structures (dots: individual datasets, bars: average between datasets).}
     \label{Fig:endogenous}
 \end{figure*}
 
@@ -26,12 +26,12 @@ One of RecBCD's purposes when processing a DSB is to facilitate the loading of t
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.8\textwidth]{Figures/Fig2_RecB_binding.pdf}
-    \caption{RecB DNA binding under ciprofloxacin exposure. \textbf{(A)} Example kymographs of RecB throughout an acquisition. A short timelapse (100 sec) is acquired at a different position every 2 min for 75 min. \textbf{(B)} RecB spot lifetime histograms at 3, 10, 20 and 30 ng/mL ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \textbf{(C)} Probability of a spot corresponding to a DNA-bound RecB molecule, for cells over-expressing the Gam protein. Black dots show individual datasets, the black line is the average between them, and the red dashed line shows the smallest lifetime at which RecB spots have 95\% probability to be DNA-bound. \textbf{(D)} Recruitment rate of RecB on DNA at different ciprofloxacin concentrations. Black points show individual datasets, and bars the median value.}
+    \caption{RecB DNA binding under ciprofloxacin exposure. \textbf{(A)} Example kymographs of RecB throughout an acquisition. A short timelapse (100 sec) is acquired at a different position every 2 min for 75 min. \textbf{(B)} RecB spot lifetime histograms at 3, 10, 20 and 30 ng/mL ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, mono-exponential decay fit components showed as dashed lines). \textbf{(C)} Probability of a spot corresponding to a DNA-bound RecB molecule, for cells over-expressing the Gam protein. Black dots show individual datasets, the black line is the average between them, and the red dashed line shows the smallest lifetime at which RecB spots have 95\% probability to be DNA-bound. \textbf{(D)} Recruitment rate of RecB on DNA at different ciprofloxacin concentrations. Black points show individual datasets, and bars the median value.}
     \label{Fig:lifetime_fits}
 \end{figure*}
 
 %% We add ciprofloxacin to increase the level of DNA damage
-To gain more insight into DNA binding by RecB, we induced additional DSBs by adding the DSB-inducing antibiotic ciprofloxacin to agar pads before imaging. Cells were left to settle down on the pad for 10 min, after which 50-frame timelapse videos were acquired at a rate of one position every 2 min (Figure \ref{Fig:lifetime_fits}A) for 60 min. This allowed us to quantify RecB binding at different time points ranging from 15 to 75 min after the start of ciprofloxacin exposure.
+To gain more insight into DNA binding by RecB, we induced additional DSBs by adding the DSB-inducing antibiotic ciprofloxacin to agar pads before imaging. Timelapse videos were acquired every 2 min for 60 min (Figure \ref{Fig:lifetime_fits}A), which allowed us to quantify RecB binding at different time points ranging from 15 to 75 min after the start of ciprofloxacin exposure.
 
 %% RecB spot lifetime histograms change upon exposure to ciprofloxacin
 %%% They are not well-fitted by a monoexponential decay (SI fig)
@@ -75,7 +75,7 @@ To determine whether both short- and long-lived spots resulted from RecB binding
 
 %% We use the number of spots and proportion of long-lived spots to estimate the rate of recruitment of RecB on the DNA (Fig 2D)
 %% Mention/link to discussion on relationship between RecB recruitment rate and DSB formation rate
-Whereas the lifetime of the fluorescent spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition (Figure \ref{Fig:lifetime_fits}D). To achieve this, we quantified for each timelapse the total number of spots that belong to the "long-lived" (i.e. RecB bound to DNA) category. Since the short- and long-lived populations cannot be clearly separated from the lifetime histograms (Figure \ref{Fig:lifetime_fits}B), we used an "ensemble-level" approach. For each dataset, we multiplied the total number of spots that appeared during the timelapse by the proportion of long-lived spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DNA-bound RecB per timelapse, from which a number of recruitment events per hour can be calculated. We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to the DNA per hour on average. This is roughly consistent with the previous estimate of 18\% of cells generating an endogenous DSB per cell cycle\cite{Sinha2018} (see discussion). At ciprofloxacin concentrations above the MIC (30 ng/mL), the recruitment rate increased sharply to an average of 5 RecB recruited per hour. Furthermore, we expect that this recruitment rate gives a close estimate of the rate of formation of DSBs (see discussion).
+Whereas the lifetime of the fluorescent spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition (Figure \ref{Fig:lifetime_fits}D). To achieve this, we quantified for each timelapse the total number of spots that belong to the "long-lived" (i.e. RecB bound to DNA) category. Since the short- and long-lived populations cannot be clearly separated from the lifetime histograms (Figure \ref{Fig:lifetime_fits}B), we used an "ensemble-level" approach. For each dataset, we multiplied the total number of spots that appeared during the timelapse by the proportion of long-lived spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DNA-bound RecB per timelapse, from which a number of recruitment events per hour can be calculated. We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to the DNA per hour on average. This is roughly consistent with the previous estimate of 18\% of cells generating an endogenous DSB per cell cycle\cite{Sinha2018}. At ciprofloxacin concentrations above the MIC (30 ng/mL), the recruitment rate increased sharply to an average of 5 RecB recruited per hour. Furthermore, we expect that this recruitment rate gives a close estimate of the rate of formation of DSBs.
 
 % Part 3: Effects of DSBs and the repair process on the cell
 \subsection*{Ciprofloxacin exposure induces formation of RecA filaments and nucleoid compaction}
@@ -98,7 +98,7 @@ In \emph{E. coli}, the loading of RecA on DNA triggers the SOS response, which i
 
 %% Nucleoid and RecB position are correlated
 %% Interpretation: RecB spot centring is due to nucleoid centring (not obvious: link to RecB recruitment rate, explain it happens after several rounds of DSBs)
-As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure \ref{Fig:reca_nucleoid}C). Figure \ref{Fig:reca_nucleoid}D show the strong overlap between the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Due to nucleoid compaction and centring, both the nucleoid density and the position of DNA-bound RecB remained within $\sim$2 µm either side of the cell centre, despite the cells having elongated significantly.
+As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure \ref{Fig:reca_nucleoid}C). Figure \ref{Fig:reca_nucleoid}D shows the strong overlap between the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Due to nucleoid compaction and centring, both the nucleoid density and the position of DNA-bound RecB remained within $\sim$2 µm either side of the cell centre, despite the cells having elongated significantly.
 
 %% Overall conclusion on RecA filaments, nucleoid compaction, and correlation of DNA-bound RecB position with nucleoid density
 Upon exposure to ciprofloxacin, cells undergoing DSB repair load RecA at the break site, which we were able to detect as bright foci and filaments. At the lower (sub-MIC) ciprofloxacin concentrations, these structures were present in a low proportion of cells (10-20\%). At higher ciprofloxacin concentrations, RecA filaments were present in a large fraction of the cells (up to 40\%), hinting at an accumulation of long-lived RecA filaments unable to find a homologous sequence for repair. RecA loading on DNA also induces the SOS response. As a result, we observed compaction and centring of the bacterial nucleoid. DNA-bound RecB molecules were also found to be centred in elongated cells, consistently with DSBs forming on compacted nucleoids.
@@ -129,7 +129,7 @@ In the \teneighty\ mutant, RecB recruitment is higher than in WT cells, but equi
 The differences in induction of the SOS response between the wild-type cells and the mutants resulted in different states of compaction for the bacterial nucleoid (Figure \ref{Fig:mutants}D, Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). Whereas in the wild-type, exposure to ciprofloxacin triggered compaction and centring of the nucleoid, the inability of the \dreca\ mutant to induce the SOS response resulted in two separate nucleoid regions at the cell poles. Furthermore, several cells appeared to have lower DNA content, consistent with RecBCD degrading large portions of the chromosome. Accordingly, the nucleoid occupied a smaller fraction of the cell in the \dreca\ mutant after exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). In the RecB1080 mutant, the nucleoid appeared more disorganised than in wild-type cells, but still underwent compaction at the centre of the cell upon exposure to ciprofloxacin. Notably, the level of compaction of the nucleoid was slightly less important than in wild-type cells (38\% $\pm$ 9 of the cell occupied by the nucleoid after 75 min of exposure to ciprofloxacin, against 32\% $\pm$ 11 in the wild-type). This might again be a reflection of the less efficient RecA loading in this mutant, leading to delayed or weaker SOS response.
 
 %% Colocalisation of RecB with the nucleoid
-In all three strains, the localisation of DNA-bound RecB was consistent with that of the bacterial nucleoid, consistent with RecB being recruited to DSBs (Figures \ref{Fig:mutants}D and \ref{Fig:mutants}E). In the \dreca\ mutant, addition of 30 ng/mL ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This is consistent with \dreca\ cells being unable to induce the SOS response, and therefore not undergoing nucleoid compaction. In the \teneighty\ mutant, both nucleoid density and DNA-bound RecB distributions form a single peak at the cell centre, in the presence and absence of ciprofloxacin. This is consistent with the \teneighty\ mutant having a higher baseline of SOS induction than wild-type cells, as previously reported.\cite{Lepore2023} The slightly broader distribution of nucleoid density and DNA-bound RecB position in the \teneighty\ mutant exposed to ciprofloxacin compared to the wild-type is consistent with the lesser nucleoid compaction observed in this mutant (Figure \ref{SIFig:mutants_nucleoid_compaction}).
+In all three strains, the localisation of DNA-bound RecB overlapped with the bacterial nucleoid, consistent with RecB being recruited to DSBs (Figures \ref{Fig:mutants}D and \ref{Fig:mutants}E). In the \dreca\ mutant, addition of 30 ng/mL ciprofloxacin did not change the spatial distribution of nucleoid density or DNA-bound RecB. This is consistent with \dreca\ cells being unable to induce the SOS response, and therefore not undergoing nucleoid compaction. In the \teneighty\ mutant, both nucleoid density and DNA-bound RecB distributions form a single peak at the cell centre, in the presence and absence of ciprofloxacin. This is consistent with the \teneighty\ mutant having a higher baseline of SOS induction than wild-type cells, as previously reported.\cite{Lepore2023} The slightly broader distribution of nucleoid density and DNA-bound RecB position in the \teneighty\ mutant exposed to ciprofloxacin compared to the wild-type is consistent with the lesser nucleoid compaction observed in this mutant (Figure \ref{SIFig:mutants_nucleoid_compaction}).
 
 \begin{figure*}[htbp]
     \centering
