--- a/Methods.tex
+++ b/Methods.tex
@@ -4,19 +4,19 @@
 \textit{E. coli} MG1655 and derivatives were used in this study. A list of all strains and plasmids used are presented in Supp. Tables \ref{SItab:strains} and \ref{SItab:plasmids}.
 MEK2623 (RecB-Halo RecA-SYFP2) was constructed by transferring the RecA-SYFP2 tandem fusion by P1 transduction, using EL2514\cite{Wiktor2021} as a donor and MEK65\cite{Lepore2019a} as a receiver. The clones were selected on Kanamycin plates, and checked by Sanger sequencing. MEK2622 (\dreca) was constructed by tranferring the \textit{recA} deletion by P1 transduction, using BHC9 as a donor, and MEK65 as a receiver. MEK2324 and AL139-3 (\teneighty) were constructed by XXXXXX. AL119 was obtained by transforming the pDT6 plasmid (gift from Mark Dillingham) into the MEK65 strain by heat-shock.
 
-\subsection*{Microscopy samples}
+\subsection*{Microscopy samples preparation}
 For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) glucose, 2 mM MgSO$_4$, 0.1 mM CaCl$_2$, 1X MEM Essential and MEM non-essential amino acids (Gibco).
 \subsubsection*{Cell culture}
 Cells were grown overnight from a -80\celsius\ glycerol stock in 5 mL medium at 37\celsius, shaking at 150 rpm. In the morning, the cells were diluted 1:300 into 15 mL of medium and grown at 37\celsius, shaking at 150 rpm until they reached an \od\ of 0.2-0.3 (mid-exponential phase).
 Alternatively, a 15 mL culture was inoculated using a -80\celsius\ glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, in order to keep them at a constant \od\ of 0.2.
 \subsubsection*{Halo labelling}
-A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius in the dark, shaking at 150 rpm.
+This protocol was adapted from \cite{Lepore2019a} to be used on living cells. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
 \subsubsection*{DNA labelling}
 When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen) at a concentration of 500 nM, at the same time as the JF549 dye. It was incubated as described above.
 \subsubsection*{Dye removal}
 The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube to avoid the dyes sticking to the plastic of the tube. This procedure was repeated 3 times to fully remove unbound dye. The cells were finally resuspended in 200 µL medium.
 \subsubsection*{Sample preparation}
-Agar-pads were prepared by dissolving 2\% agarose in culture medium. In experiments with ciprofloxacin, the antibiotic was added to the agar-pad at the desired final concentration. After the dye removal step, 5 µL of cells were added on the agar-pad, and left to settle for 10 min at 37\celsius\ before imaging.
+Agar-pads were prepared by dissolving 2\% agarose in culture medium. In experiments with ciprofloxacin, the antibiotic was added to the agar-pad at the desired final concentration. After the dye removal step, 5 µL of cells were added on the agar-pad, and left to settle for 10 min at 37\celsius\ in the dark before imaging.
 
 \subsection*{Microscopy}
 \subsubsection*{Microscope set-up}
