Added RecB spot lifetimes at different timepoints

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -82,6 +82,15 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SItab:acquisition_channels}
 \end{supptable}
 
+% Photobleaching figure (curves + fitted rates)
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\textwidth]{SI_Figures/SIFig_bleaching.pdf}
+    \end{center}
+    \caption{Ensemble-level photobleaching of the JF549 dye. (A) Average background-subtracted fluorescence for 5 independent datasets (solid lines), overlaid with the photobleaching rate fit ($y=a.e^{-k.t}+b$, dotted line). (B) Fitted model parameters for each of the 5 datasets: amplitude (a), offset (b) and photobleaching rate (k).}
+    \label{SIFig:dye_bleaching}
+\end{suppfigure*}
+
 % Data analysis pipeline
 \begin{suppfigure*}[htbp]
 \begin{center}
@@ -102,15 +111,6 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:object_class}
 \end{suppfigure*}
 
-% Photobleaching figure (curves + fitted rates)
-\begin{suppfigure*}[htbp]
-    \begin{center}
-    \includegraphics[width=\textwidth]{SI_Figures/SIFig_bleaching.pdf}
-    \end{center}
-    \caption{Ensemble-level photobleaching of the JF549 dye. (A) Average background-subtracted fluorescence for 5 independent datasets (solid lines), overlaid with the photobleaching rate fit ($y=a.e^{-k.t}+b$, dotted line). (B) Fitted model parameters for each of the 5 datasets: amplitude (a), offset (b) and photobleaching rate (k).}
-    \label{SIFig:dye_bleaching}
-    \end{suppfigure*}
-
 % Example image of freely diffusing halo-tag + JF549
 \begin{suppfigure*}[htbp]
 \begin{center}
@@ -129,7 +129,14 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 \label{SIFig:monoexp_fits}
 \end{suppfigure*}
 
-%\clearpage
+% Fitted RecB spot lifetimes at different durations of ciprofloxacin exposure
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\linewidth]{SI_Figures/RecB_lifetime_timepoints.pdf}
+    \end{center}
+    \caption{Fitted lifetimes of short- and long-lived RecB spots, following different durations of exposure to ciprofloxacin. Coloured bars represent the fitted lifetimes, and black strokes the standard error of the mean obtained by bootstrapping.}
+    \label{SIFig:RecB_lifetimes_timepoints}
+    \end{suppfigure*}
 
 % Cell length under Gam over-expression, 0 and 30 ng/mL cipro
 \begin{suppfigure*}[htbp]
